# intervalgame

./: README.md
IntervalGame/: CMakeLists.txt  IntervalGame.sln
IntervalGame/IntervalGame/: Array4Bit.cpp  Array4Bit.h  ColoredGraph.cpp  ColoredGraph.h  Coloring.cpp  Coloring.h  Graph.cpp  Graph.h  GraphMap.h  IntervalGame.cpp  IntervalGame.vcxproj  IntervalGame.vcxproj.filters  IntervalGraph.cpp  IntervalGraph.h  ReadMe.txt  ThreadPool.h
